# DreamForge

./: .gitignore  README.md  generateProject.bat  generateProject.sh
resources/shaders/: CineShaderLava.frag  DiscoTunnel.frag  MengerTunnel.frag  computeParticles.spv  entireScreen.vert  fractalPyramid.frag  kishimisuTutorial.frag  particles.frag  particles.vert  rainbowStrip.frag  triangleTest.frag  triangleTest.vert  triangleText.vert
resources/testScripts/: compileC#.bat  testScript.cs  testScripts1.cs
src/: CMakeLists.txt  vcpkg.json
src/DreamForgeCore/: CMakeLists.txt
src/DreamForgeCore/cpp/: ApplicationBase.cpp  DFApp.cpp  DFLog.cpp  Scripting.cpp  Texture.cpp  VulkanDevice.cpp  VulkanRenderer.cpp  Window.cpp  errorHandling.cpp  pipeline.cpp
src/DreamForgeCore/cpp/ECS/: ComponentManager.cpp  ComponentManager.hpp  Components.hpp  ECS.cpp  ECS.hpp  ECSEvents.hpp  EntityManager.cpp  EntityManager.hpp
src/DreamForgeCore/headers/: ApplicationBase.hpp  BiDirectionalTypeIntMap.hpp  DFApp.hpp  HelpfulTypeAliases.hpp  Logging.hpp  Scripting.hpp  Texture.hpp  VulkanDevice.hpp  VulkanRenderer.hpp  Window.hpp  df_export.hpp  errorHandling.hpp  themeTests.hpp
src/DreamForgeCore/interfaceHeaders/: DreamForge.hpp
src/DreamForgeEditor/: CMakeLists.txt
src/DreamForgeEditor/cpp/: GUITheme.cpp  main.cpp
src/DreamForgeEditor/headers/: GUITheme.hpp
